fix overflow

--- a/frontend/src/assets/styles/common/general.scss
+++ b/frontend/src/assets/styles/common/general.scss
@@ -44,7 +44,7 @@ h6 {
 #okp {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   width: 100vw;
   height: 100vh;
 
